examples/invalid/test27.alice

The looking-glass hatta ()
opened 
   x was a number and x became 100.
   (100 + x) became 101.
closed
